--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   supabase_flutter: ^1.2.2
   go_router: ^4.5.1
+  image_picker: ^0.8.6
+  flutter_riverpod: ^2.1.3
 
 dev_dependencies:
   flutter_test:
