--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,5 +57,11 @@
       </array>
     </dict>
   </array>
+	<key>NSCameraUsageDescription</key>
+<string>Access to take a photo by camera</string>
+<key>NSAppleMusicUsageDescription</key>
+<string>Access to pick a photo</string>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>Access to pick a photo</string>
 </dict>
 </plist>
